--- a/androidProject/res/values/strings.xml
+++ b/androidProject/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">StarlightTLSE</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="menu_button">MENU</string>
 
 </resources>
