--- a/androidProject/res/values/strings.xml
+++ b/androidProject/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_button">MENU</string>
+    <string name="not_implemented">Not yet implemented, sorry :-(</string>
+    <string name="planet_scale">Planet scale</string>
+    <string name="star_scale">Stars scale</string>
+    <string name="btn_ok">OK</string>
+    <string name="btn_cancel">Cancel</string>
 
 </resources>
